--- a/DaemonCharacter/DaemonCharacter/Views/AttributeType/Create.cshtml
+++ b/DaemonCharacter/DaemonCharacter/Views/AttributeType/Create.cshtml
@@ -6,7 +6,7 @@
 }
 
 
-@model DaemonCharacter.Models.AttributeTypeClass
+@model DaemonCharacter.Models.AttributeTypeModel
 
 @{
     ViewBag.Title = "Create";
