--- a/DaemonCharacter/DaemonCharacter/Views/AttributeType/Index.cshtml
+++ b/DaemonCharacter/DaemonCharacter/Views/AttributeType/Index.cshtml
@@ -6,7 +6,7 @@
 }
 
 
-@model IEnumerable<DaemonCharacter.Models.AttributeTypeClass>
+@model IEnumerable<DaemonCharacter.Models.AttributeTypeModel>
 
 @{
     ViewBag.Title = "Index";
