--- a/DaemonCharacter/DaemonCharacter/Views/CharacterAttribute/ListNonCharacter.cshtml
+++ b/DaemonCharacter/DaemonCharacter/Views/CharacterAttribute/ListNonCharacter.cshtml
@@ -26,6 +26,6 @@
     </dl>
     <p>
         <input type="button" value="Finish" class="button" id="submitAttributes" />
+        <span href="#" id="unselectAttributes" onclick="unselectAttributes()" style="cursor:pointer">Unselect all</span>
     </p>
-    <p class="messages" id="CharacterAttributeMessage"></p>
 </fieldset>
