--- a/DaemonCharacter/DaemonCharacter/Views/AttributeType/Edit.cshtml
+++ b/DaemonCharacter/DaemonCharacter/Views/AttributeType/Edit.cshtml
@@ -5,7 +5,7 @@
     </script>
 }
 
-@model DaemonCharacter.Models.AttributeTypeClass
+@model DaemonCharacter.Models.AttributeTypeModel
 
 @{
     ViewBag.Title = "Edit";
