--- a/DaemonCharacter/DaemonCharacter/Views/Shared/_Menu.cshtml
+++ b/DaemonCharacter/DaemonCharacter/Views/Shared/_Menu.cshtml
@@ -30,6 +30,13 @@
                 </ul>
             </li>
             <li class='has-sub'>
+                <a href="#"><span>Races</span></a>
+                <ul>
+                    <li>@Html.ActionLink("Races", "Index", "Race")</li>
+                    <li>@Html.ActionLink("Create", "Create", "Race")</li>
+                </ul>
+            </li>
+            <li class='has-sub'>
                 <a href="#"><span>Campaigns</span></a>
                 <ul>
                     <li>@Html.ActionLink("List Campaigns", "Index", "Campaign")</li>
