--- a/DaemonCharacter/DaemonCharacter/Views/Character/Edit.cshtml
+++ b/DaemonCharacter/DaemonCharacter/Views/Character/Edit.cshtml
@@ -20,7 +20,7 @@
     <fieldset>
         <legend>CharacterModel</legend>
 
-        @Html.HiddenFor(model => model.idCharacter)
+        @Html.HiddenFor(model => model.idPerson)
 
         <div class="editor-label">
             @Html.LabelFor(model => model.name)
