--- a/DaemonCharacter/DaemonCharacter/Views/CharacterAttribute/ListNonCharacter.cshtml
+++ b/DaemonCharacter/DaemonCharacter/Views/CharacterAttribute/ListNonCharacter.cshtml
@@ -1,31 +1,38 @@
 ﻿@model IEnumerable<DaemonCharacter.Models.AttributeModel>
 
+@using (Html.BeginForm(null, null, FormMethod.Post, new { id = "formCharacterAttributes" }))
+{
+    @Html.AntiForgeryToken()
+    @Html.ValidationSummary(true)
 
-<fieldset>
-    <legend>Attributes</legend>
+    @Html.Hidden("model", (string)ViewBag.model)
 
-    @{
-        var type = string.Empty;
-    }
-    <dl>
-        @foreach (var items in Model)
+    <fieldset>
+        <legend>Attributes</legend>
+
+        @{
+            var type = string.Empty;
+        }
+        <dl>
+            @foreach (var items in Model)
             {
                 if (type != items.type.name)
                 {
                     type = items.type.name;
 
-                <dd class="selector-Dynamic-header">@Html.DisplayName(type)</dd>
+                    <dd class="selector-Dynamic-header">@Html.DisplayName(type)</dd>
 
+                }
+                <dt class="selector-Dynamic-details">
+                    <input type="checkbox" class="chk-dynamic" id="ChkAttr_@Html.Raw(items.idAttribute)" name="ChkAttr_@Html.Raw(items.idAttribute)" />
+                    <span title="@Html.Raw(items.description)" onclick="setCheckbox(ChkAttr_@Html.Raw(items.idAttribute))">@Html.DisplayName(items.name)</span>
+                    <input type="number" class="dynamic-input" id="ValAttr_@Html.Raw(items.idAttribute)" name="ValAttr_@Html.Raw(items.idAttribute)" onchange="CalculateRemainingPoints(this)">
+                </dt>
             }
-            <dt class="selector-Dynamic-details">
-                <input type="checkbox" class="chk-dynamic" id="ChkAttr_@Html.Raw(items.idAttribute)" />
-                <span title="@Html.Raw(items.description)" onclick="setCheckbox(ChkAttr_@Html.Raw(items.idAttribute))">@Html.DisplayName(items.name)</span>
-                <input type="number" class="dynamic-input" id="ValAttr_@Html.Raw(items.idAttribute)" onchange="CalculateRemainingPoints(this)">
-            </dt>
-        }
-    </dl>
-    <p>
-        <input type="button" value="Finish" class="button" id="submitAttributes" />
-        <span href="#" id="unselectAttributes" onclick="unselectAttributes()" style="cursor:pointer">Unselect all</span>
-    </p>
-</fieldset>
+        </dl>
+        <p>
+            <input type="button" value="Finish" class="button" id="submitAttributes" />
+            <span href="#" id="unselectAttributes" onclick="unselectAttributes()" style="cursor:pointer">Unselect all</span>
+        </p>
+    </fieldset>
+            }
