--- a/DaemonCharacter/DaemonCharacter/Views/Attribute/Create.cshtml
+++ b/DaemonCharacter/DaemonCharacter/Views/Attribute/Create.cshtml
@@ -40,7 +40,7 @@
         </div>
 
         <div class="editor-label">
-            @Html.LabelFor(model => model.type.name)
+            @Html.LabelFor(model => model.type)
         </div>
         <div class="editor-field">
            @Html.DropDownList("idAttributeType", String.Empty)
