--- a/DaemonCharacter/DaemonCharacter/Views/Attribute/Edit.cshtml
+++ b/DaemonCharacter/DaemonCharacter/Views/Attribute/Edit.cshtml
@@ -21,7 +21,7 @@
     <fieldset>
         <legend>AttributeModel</legend>
 
-        @Html.HiddenFor(model => model.idAttribute)
+        @Html.HiddenFor(model => model.id)
 
         <div class="editor-label">
             @Html.LabelFor(model => model.name)
