--- a/DaemonCharacter/DaemonCharacter/Views/AttributeType/Edit.cshtml
+++ b/DaemonCharacter/DaemonCharacter/Views/AttributeType/Edit.cshtml
@@ -20,7 +20,7 @@
     <fieldset>
         <legend>AttributeType</legend>
 
-        @Html.HiddenFor(model => model.idAttributeType)
+        @Html.HiddenFor(model => model.id)
 
         <div class="editor-label">
             @Html.LabelFor(model => model.name)
